# rdma-core-54mlnx1

./: CMakeLists.txt  rdma-core.spec
debian/: changelog  control  copyright  ibverbs-providers.lintian-overrides  ibverbs-providers.symbols  rdma-core.docs  rdma-core.install  rules
ibacm/prov/acmp/src/: acmp.c
ibacm/src/: acm.c
kernel-headers/rdma/: mlx5_user_ioctl_cmds.h  mlx5_user_ioctl_verbs.h
libibverbs/: verbs.h
libibverbs/man/: ibv_query_qp_data_in_order.3.md
providers/mlx5/: CMakeLists.txt  cq.c  dr_action.c  dr_dbg.c  dr_devx.c  dr_domain.c  dr_icm_pool.c  dr_matcher.c  dr_nl.c  dr_rule.c  dr_send.c  dr_ste.c  dr_ste.h  dr_ste_v0.c  dr_ste_v1.c  dr_table.c  libmlx5.map  mlx5.c  mlx5.h  mlx5_api.h  mlx5_ifc.h  mlx5dv.h  mlx5dv_dr.h  qp.c  verbs.c
providers/mlx5/man/: CMakeLists.txt  mlx5dv_dr_flow.3.md  mlx5dv_map_ah_to_qp.3.md  mlx5dv_qp_cancel_posted_send_wrs.3.md  mlx5dv_query_device.3
pyverbs/: CMakeLists.txt  device.pyx  libibverbs.pxd  libibverbs_enums.pxd
pyverbs/providers/mlx5/: CMakeLists.txt  dr_action.pxd  libmlx5.pxd  mlx5dv.pyx  mlx5dv_enums.pxd
srp_daemon/: CMakeLists.txt
tests/: CMakeLists.txt  base.py  mlx5_base.py  test_mlx5_dma_memcpy.py  test_mlx5_mkey.py  test_mlx5_raw_wqe.py  test_mlx5_sched.py  utils.py
util/: rdma_nl.c  rdma_nl.h
